--- a/arch/arm64/configs/s5e8835-a54xnsxx_defconfig
+++ b/arch/arm64/configs/s5e8835-a54xnsxx_defconfig
@@ -7861,11 +7861,11 @@ CONFIG_SECURITY_SELINUX_SID2STR_CACHE_SIZE=256
 # CONFIG_SECURITY_SAFESETID is not set
 # CONFIG_SECURITY_LOCKDOWN_LSM is not set
 # CONFIG_SECURITY_LANDLOCK is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
-CONFIG_INTEGRITY_TRUSTED_KEYRING=y
-CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_INTEGRITY is not set
+# CONFIG_INTEGRITY_SIGNATURE is not set
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
+# CONFIG_INTEGRITY_TRUSTED_KEYRING is not set
+# CONFIG_INTEGRITY_AUDIT is not set
 # CONFIG_IMA is not set
 # CONFIG_IMA_SECURE_AND_OR_TRUSTED_BOOT is not set
 # CONFIG_EVM is not set
